--- a/index.html
+++ b/index.html
@@ -177,9 +177,27 @@
     </div>
 	
 	<label>
+	<input type="checkbox" id="rhythmCountCheckbox" />
+		Count Rhythm
+	</label>
+	
+	
+	<input type="range" id="rhythmCountBpmSlider" min="60" max="230" value="100">
+	<label for="rhythmCountBpmSlider">BPM:</label>
+	<span id="rhythmCountBpmSliderValue">100</span>
+	
+	<br>
+	
+	<label>
 	<input type="checkbox" id="playMusicCheckbox" />
 		Play music
 	</label>
+	
+
+	
+	
+	
+	
 	
 	<div id="currentSongTitle"></div>
 	<div id="musicControlSettings">
@@ -652,9 +670,15 @@
 		const autoDrillPauseToggle = document.getElementById("autoDrillPauseToggle");
 		const autoDrillSecondsLeft = document.getElementById("autoDrillSecondsLeft");
 		const playMusicCheckbox = document.getElementById("playMusicCheckbox");
+		const rhythmCountCheckbox = document.getElementById("rhythmCountCheckbox");
+		const rhythmCountBpmSlider = document.getElementById("rhythmCountBpmSlider");
+		const rhythmCountBpmSliderDisplay = document.getElementById("rhythmCountBpmSliderValue");
+		
 		const currentSongTitle = document.getElementById("currentSongTitle");
 		const musicPauseButton = document.getElementById('musicPauseButton');
 		const musicControlSettings = document.getElementById('musicControlSettings');
+
+
 
 
         // Load saved settings from local storage
@@ -694,11 +718,21 @@
 			//const playMusicSetting = localStorage.getItem('playMusic');
             //playMusicCheckbox.checked = playMusicSetting === 'true';
 			
+			const rhythmCountSetting = localStorage.getItem('rhythmCount');
+            rhythmCountCheckbox.checked = rhythmCountSetting === 'true';
+			
+			const rhythmCountBpmSetting = localStorage.getItem('rhythmCountBpm');
+            rhythmCountBpmSlider.value = rhythmCountBpmSetting || 100;
+			rhythmCountBpmSliderDisplay.textContent = rhythmCountBpmSlider.value;
 
             toggleAutoDrillSettings();
 
 
             updateProgressText();
+			
+			
+			ensureVoiceCalibration();
+			
         };
 
         danceTypesSelect.addEventListener('change', () => {
@@ -780,6 +814,79 @@
                 startAutoDrill();
             }
         });
+
+
+		rhythmCountCheckbox.addEventListener('change', function() {
+			//ensureVoiceCalibration();
+			saveSettings();
+		});
+
+		rhythmCountBpmSlider.addEventListener('input', function() {
+			rhythmCountBpmSliderDisplay.textContent =  rhythmCountBpmSlider.value;
+			saveSettings();
+		});
+
+
+	//------- Cal;ibrate Voice Timming
+	
+	function calibrateVoiceTiming() {
+		const phrases = ["Slow", "Quick", "And", "1", "2", "3", "4", "5", "6", "7", "8"];
+		const timingData = {};
+		let currentPhraseIndex = 0;
+
+		// Announce calibration and start the timing process
+		speak("Calibrating voice", () => {
+			calibrateNextPhrase();
+		});
+
+		function calibrateNextPhrase() {
+			if (currentPhraseIndex >= phrases.length) {
+				// Save all timing data to local storage once calibration is complete
+				localStorage.setItem("voiceTimingData", JSON.stringify(timingData));
+				console.log("Voice calibration complete:", timingData);
+				return;
+			}
+
+			const phrase = phrases[currentPhraseIndex];
+			const startTime = performance.now();
+
+			// Use speech synthesis to speak the phrase
+			speak(phrase, () => {
+				const endTime = performance.now();
+				timingData[phrase] = endTime - startTime;
+				currentPhraseIndex++;
+				calibrateNextPhrase(); // Move to the next phrase after current one completes
+			});
+		}
+	}
+
+	// Function to speak a phrase with a callback on completion
+	function speak(text, onEndCallback) {
+		const utterance = new SpeechSynthesisUtterance(text);
+		utterance.onend = onEndCallback;
+		speechSynthesis.speak(utterance);
+	}
+
+	let voiceTimingData;
+
+	// Check if calibration data exists
+	function ensureVoiceCalibration() {
+		voiceTimingData = JSON.parse(localStorage.getItem("voiceTimingData"));
+		if (!voiceTimingData) {
+			calibrateVoiceTiming();
+		} else {
+			console.log("Calibration data loaded from storage:", voiceTimingData);
+		}
+	}
+	
+	
+	//-------------------
+
+
+
+
+
+
 
 
 		function startAutoDrill() {
@@ -1100,6 +1207,8 @@
 			localStorage.setItem('autoDrillSlider', autoDrillSlider.value);
 			localStorage.setItem('playMusic', playMusicCheckbox.checked);
 			
+			localStorage.setItem('rhythmCount', rhythmCountCheckbox.checked);
+			localStorage.setItem('rhythmCountBpm', rhythmCountBpmSlider.value);
 			
         }
 
@@ -1135,7 +1244,134 @@
 			utterance.voice = role === 'Follow' ? femaleVoice : maleVoice;
 			utterance.rate=1.3;
             speechSynthesis.speak(utterance);
+			
+			const bpmSetting = rhythmCountBpmSlider.value;
+			utterance.onend = () => {
+				if (rhythmCountCheckbox.checked) {
+					speakRhythmCount(danceMove.rhythm, bpmSetting);
+				}
+			};
+			
         }
+		
+		
+		
+		
+		/*
+		function speakRhythmCount(rhythmString, bpm) {
+			const beatDuration = 60000 / bpm; // Duration of a beat in ms
+			let delay = 0;
+
+			// Map each character in rhythm string to its duration and text
+			for (let i = 0; i < rhythmString.length; i++) {
+				let char = rhythmString[i];
+				let text;
+				let duration;
+
+				if (char === 'S') {
+					text = "Slow";
+					duration = 2 * beatDuration;
+				} else if (char === 'Q') {
+					text = "Quick";
+					duration = beatDuration;
+				} else if (char === '&') {
+					text = "And";
+					duration = beatDuration / 2;
+				} else if (!isNaN(parseInt(char))) {  // Digits
+					text = char;
+					duration = beatDuration;
+				} else {
+					continue; // Ignore other characters
+				}
+
+				// Speak the rhythm part after the delay
+				setTimeout(() => {
+					let utterance = new SpeechSynthesisUtterance(text);
+					speechSynthesis.speak(utterance);
+				}, delay);
+
+				// Increment the delay for the next part
+				delay += duration;
+			}
+		}
+		*/
+		
+		function speakRhythmCount(rhythm, bpm) {
+			if (!rhythmCountCheckbox.checked) return;
+
+			const beats = calculateBeats(rhythm); // Convert rhythm string to beat intervals
+			const beatDurationMs = (60 / bpm) * 1000; // Duration of one beat in milliseconds
+			let currentIndex = 0;
+
+			function speakWithTiming(text, beatsRequired) {
+				const totalDuration = beatDurationMs * beatsRequired; // Time allocated for this utterance
+				const pauseDuration = totalDuration * 0;//0.2; // Allocate 20% of time for a pause
+				const speechDuration = totalDuration - pauseDuration;
+
+				// Set speech rate dynamically to fit within allocated speech duration
+				const utterance = new SpeechSynthesisUtterance(text);
+				//utterance.voice = maleVoice;
+				utterance.rate = calculateSpeechRate(text, speechDuration); // Dynamic rate based on text and duration
+				
+
+				// Play the utterance and queue the next one after total duration
+				window.speechSynthesis.speak(utterance);
+				setTimeout(playNextBeat, totalDuration); // Move to next after the total duration
+			}
+
+			function playNextBeat() {
+				if (!rhythmCountCheckbox.checked) return;
+				if (currentIndex >= beats.length) return; // Stop if all beats are counted
+				const beat = beats[currentIndex];
+
+				// Decide the text and timing based on the beat type
+				if (beat === '1' || beat === '2' || beat === '3'|| beat === '4'|| beat === '5'|| beat === '6' || beat === '7' || beat === '8'|| beat === '9') {
+					speakWithTiming(beat, 1); // Digits take 1 beat
+				} else if (beat === 'Q') {
+					speakWithTiming("Quick", 1); // Quick takes 1 beat
+				} else if (beat === 'S') {
+					speakWithTiming("Slow", 2); // Slow takes 2 beats
+				} else if (beat === '&') {
+					speakWithTiming("And", 0.5); // & takes half a beat
+				}
+
+				currentIndex++;
+			}
+
+			playNextBeat();
+		}
+
+		// Calculate dynamic speech rate based on desired duration
+		function calculateSpeechRate(text, targetDurationMs) {
+			//const baseDuration = 1000; // Assume default speech rate takes about 1 second for "Slow" or "Quick"
+			
+			const baseDuration = voiceTimingData[text];
+			
+			console.log (voiceTimingData)
+			console.log (voiceTimingData[text])
+			
+			return Math.round(baseDuration / targetDurationMs); // Adjust rate to fit the target duration
+		}
+
+		// Parse rhythm string into beat intervals
+		function calculateBeats(rhythm) {
+			const beats = [];
+			for (const char of rhythm) {
+				if (char === 'S') {
+					beats.push('S'); // Slow
+				} else if (char === 'Q') {
+					beats.push('Q'); // Quick
+				} else if (char === '&') {
+					beats.push('&'); // Half beat
+				} else if (!isNaN(char)) { // Number digits
+					beats.push(char);
+				}
+			}
+			return beats;
+		}
+		
+		
+		
 		
 		
 		function playMusic(danceType) {
@@ -1176,10 +1412,6 @@
 				}
 			
 			}
-
-
-
-
 
 			audio.src = currentSong.url;
 			audio.currentTime = currentSong.startTime || 0; // Default to 0 if no startTime is specified
