Added The Rest of the Mambos
We now have all  1-5 for bronze intermediate

--- a/index.html
+++ b/index.html
@@ -329,8 +329,18 @@
 				{ index: 5.2, name: "Double Tuck-In Turn", 				rhythm: "1&2,3&4,56;1&2,3&4,56;1&2,3&4,56;1&2,3&4,56;" },
 				{ index: 5.3, name: "Shoulder Spin Tuck-In", 			rhythm: "1&2,3&4,56;1&2,3&4,56;1&2,3&4,56;1&2,3&4,56;" }
 			],
-			"Mambo": [
-				{ index: 1.1, name: "Box Step", 				rhythm: "123-4;123-4" ,	footPos: "442;442", elements: "Forward Rockstep, Side Step; Back Rockstep, Side Step"}//,
+			"Mambo": [//On2
+				{ index: 1.1, name: "Box Step", 						rhythm: "1234;1234" ,	footPos: "2442;2442", elements: "Hold, Forward Rockstep, Side Step; Back Rockstep, Side Step"},
+				{ index: 1.2, name: "Progressive Basic", 				rhythm: "1234;1234" ,	footPos: "444;444", elements: "Hold, Forward Rockstep, Back Step; Back Rockstep, Forward Step"},
+				{ index: 2, name: "Cross Body Lead", 					rhythm: "1234;1234" ,	footPos: "443;4442", elements: "Hold, Forward Rockstep, Side Step 3rd; Back Rockstep, Side Step"},
+				{ index: 3.1, name: "Forward & Backward Break Steps", 	rhythm: "1234;1234" ,	footPos: "1441;1441", elements: "Hold, Forward Rockstep, Close; Back Rockstep, Close"},
+				{ index: 3.2, name: "Side Breaks Without Turn", 		rhythm: "1234;1234" ,	footPos: "1441;1441", elements: "Hold, Side Rockstep, Close; Side Rockstep, Close"},
+				{ index: 3.2, name: "Side Breaks With Turn", 			rhythm: "1234;1234;1234;1234" ,	footPos: "1441;1441", elements: "Hold, Side Rockstep, turn 90 to Close; Side Break Rockstep, Turn 180 Close;  Side Break Rockstep, Turn 180 Close;  Side Break Rockstep, Turn 90 Close;"},
+				{ index: 3.3, name: "Shine Forward Break Steps", 		rhythm: "1234;1234;1234;1234;1234;1234" ,	footPos: "444;444;42;42;444;444", elements: "Hold, Progressive Basic; Press Step, Press Step, Progressive Basic"},
+				{ index: 4.1, name: "Natural Underarm Turn", 			rhythm: "1234;1234;1234;1234", 				elements: "Crossbody Lead, Open Break, 4th Position Rock Step while lead follows Natural Turn"},
+				{ index: 4.2, name: "Reverse Underarm Turn", 			rhythm: "1234;1234;1234;1234", 				elements: "Basic Box Step, 5th Position Break, 2nd Half of Cross Body Lead but last step forward instead of side"},
+				{ index: 5.1, name: "Full Chase Turn", 					rhythm: "1234;1234;1234;1234;1234;1234", 	elements: "Progressive Basic, Full Chase Turn (Millitary turn + Fan = 360), 2nd half Progressive Basic, Progressive Basic"},
+				{ index: 5.1, name: "Chase Turn (half)", 				rhythm: "1234;1234;1234;1234;1234;1234", 	elements: "Progressive Basic, Half Chase Turn (Walk Forward, Millitary turn), Half Chase Turn (Walk Forward, Millitary turn), Progressive Basic"}
 			],
 			"Samba": [
 				{ index: 1.1, name: "Basic", 				rhythm: "1&2;1&2",	footPos: "41;41", elements: "Forward Ballance Step; Back Ballance Step"}, 
